deployment/project-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-service
  template:
    metadata:
      labels:
        app: project-service
    spec:
      containers:
        - name: project-service
          image: phathdt379/project-service:v8
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: project-service
spec:
  selector:
    app: project-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
