deployment/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
    - '*'
  gateways:
    - mygateway
  http:
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: auth-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /projects
      route:
        - destination:
            host: project-service
            port:
              number: 80
