deployment/jwt-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: default
spec:
  selector:
    matchLabels:
      app: project-service
  jwtRules:
    - issuer: 'auth-service'
      jwksUri: 'http://auth-service.default.svc.cluster.local/auth/.well-known/jwks.json'
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: default
spec:
  selector:
    matchLabels:
      app: project-service
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ['*']
      to:
        - operation:
            methods: ['GET']
            paths: ['/projects']
